--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: gilroy;
+    src: url(../font/Gilroy-Regular.otf);
+}
+@font-face {
+    font-family: yank;
+    src: url(../font/yank-webfont.ttf);
+}
+
 
 :root{
     --bg-black-900:#f2f2fc;
