--- a/css/style.css
+++ b/css/style.css
@@ -611,15 +611,20 @@ ul{
     background-repeat: 10px;
     overflow: hidden;
     cursor: pointer;
+    border-radius: 20px;
+}
+.project .project-item-inner:hover{
+    box-shadow: 2px 2px 10px gray;
 }
 .project .project-item-inner .project-img{
     width: 100%;
     display: block;
 }
 .project .project-item-inner .project-img:hover{
-    opacity: 0.2;
+    opacity: 0.5;
 }
 .project .project-item-inner .project-img img{
+    border-radius: 20px;
     width: 100%;
     height: 100%;
     object-fit: cover;
