--- a/css/responsive.css
+++ b/css/responsive.css
@@ -89,7 +89,7 @@ body.dark{
         
     }
     .home .home-img img{
-        border: 2px solid var(--text-black-900);
+        border: .05px solid var(--text-black-900);
         width: 310px;
         height: 310px;
         object-fit: contain;
@@ -109,8 +109,10 @@ body.dark{
         margin: 15px 0;
     }
     .home .home-info p{
-        font-size: 20px;
-        margin-bottom: 30px;
+        font-size: 15px;
+    }
+    .home .home-info a{
+        margin-top: 15px;
     }
     
     .aside{
