--- a/css/style.css
+++ b/css/style.css
@@ -627,26 +627,58 @@ ul{
     border: 6px solid var(--bg-black-100);
     background-repeat: 10px;
     overflow: hidden;
-    cursor: pointer;
-    border-radius: 20px;
+    border-radius: 10px;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 2s;
 }
 .project .project-item-inner:hover{
-    box-shadow: 2px 2px 10px gray;
+    box-shadow: 0px 1px 40px rgb(183, 179, 179);
+    scale: 1.1;
 }
 .project .project-item-inner .project-img{
     width: 100%;
     display: block;
+    position: relative;
 }
-.project .project-item-inner .project-img:hover{
-    opacity: 0.5;
+.project .project-item-inner .project-img a{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+.project .project-item-inner .project-img button{
+    cursor: pointer;
+    padding: 5px 20px;
+    border-radius: 10px;
+    border: none;
+    margin: 10px 0;
+    background-color: var(--bg-black-50);
+    color: var(--skin-color);
+}
+
+
 .project .project-item-inner .project-img img{
-    border-radius: 20px;
+    border-radius: 10px;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
 }
+.viewMorePro{
+    width: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin: 40px 0 10px;
+}
+.viewMorePro button{
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    color: var(--skin-color);
+    background-color: var(--bg-black-50);
+    font-weight: 700;
+}
+
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 /* Contact */
 .contact-title{
@@ -744,8 +776,8 @@ ul{
 /* Style Switcher */
 .style-switcher{
     position: fixed;
-    right: 0;
-    top: 60px;
+    right: -10px;
+    top: 10px;
     padding: 15px;
     width: 200px;
     border: 1px solid var(--bg-black-50);
@@ -756,7 +788,7 @@ ul{
     transform: translateX(100%);
 }
 .style-switcher.open{
-    transform: translateX(-25%);
+    transform: translateX(-10%);
 }
 .style-switcher .s-icon{
     position: absolute;
