--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
     outline: none;
     text-decoration: none;
     box-sizing: border-box;
+    user-select:"none";
 }
 body.dark{
     --bg-black-900:#151515;
